--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 </head>
 <body>
     <h1>İlaç Hesaplama Formu</h1>
+    <p style="font-style: italic; font-size: 12px;">DEA-LCA</p>
     <form>
         <label for="weight">Ağırlık:</label>
         <input type="number" id="weight" name="weight" required>
