--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
             var weight = parseFloat(document.getElementById('weight').value);
             var weightUnit = document.getElementById('weight_unit').value;
             var dosePerKg = parseFloat(document.getElementById('dose_per_kg').value);
+            var doseUnit = document.getElementById('dose_unit').value;
             var concentrationMg = parseFloat(document.getElementById('concentration_mg').value);
             var concentrationMl = parseFloat(document.getElementById('concentration_ml').value);
 
             if (weightUnit === 'gram') {
                 weight /= 1000.0;
+            }
+
+            if (doseUnit === 'mg') {
+                dosePerKg /= 1000.0;  // Convert mg to g if dose unit is mg
             }
 
             var weightBasedDose = weight * dosePerKg;
@@ -37,7 +42,11 @@
         </select><br><br>
 
         <label for="dose_per_kg">Kilogram Başına Doz:</label>
-        <input type="number" id="dose_per_kg" name="dose_per_kg" required> mg/kg<br><br>
+        <input type="number" id="dose_per_kg" name="dose_per_kg" required>
+        <select id="dose_unit" name="dose_unit">
+            <option value="mg">mg</option>
+            <option value="g">g</option>
+        </select><br><br>
 
         <label for="concentration_mg">Konsantrasyon (mg):</label>
         <input type="number" id="concentration_mg" name="concentration_mg" required> mg<br><br>
