--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Veterinerlik İlaç Sözlüğü ve Hesaplama</title>
+    <title>Veterinerlik İlaç Sözlüğü ve Dozaj Hesaplama</title>
+    <div style="text-align: center; font-weight: bold;">DEA</div>
     <style>
         body {
             font-family: 'Arial', sans-serif;
