--- a/index.html
+++ b/index.html
@@ -347,5 +347,88 @@
             </div>
         </div>
     </div>
+    <div id="differential" class="tab-content">
+        <h2>Detaylı Ayırıcı Tanı Şemaları</h2>
+        <table border="1" cellspacing="0" cellpadding="5">
+            <tr>
+                <th>Şema Adı</th>
+                <th>Açıklama</th>
+                <th>Tanı ve Tedavi Protokolü</th>
+            </tr>
+            <tr>
+            <td>1. Gastrointestinal Hastalıklar</td>
+            <td>İshal, kusma, kilo kaybı gibi belirtilerle; enteritis, gastritis, parazit enfestasyonları gibi durumları değerlendirir.</td>
+            <td>
+                <b>Tanı:</b> Klinik bulgular, dışkı analizi, kan testleri.<br>
+                <b>Tedavi:</b> Antibiyotikler, probiyotikler, beslenme düzenlemeleri.
+            </td>
+        </tr>
+        <tr>
+            <td>2. Solunum Yolu Hastalıkları</td>
+            <td>Öksürük, nefes darlığı, burun akıntısı gibi semptomlarla; pnömoni, bronşit, solunum yolu enfeksiyonlarına yönelik teşhisleri içerir.</td>
+            <td>
+                <b>Tanı:</b> Röntgen, kan gazı analizi, bronkoskopi.<br>
+                <b>Tedavi:</b> Antibiyotikler, anti-inflamatuar ilaçlar, solunum desteği.
+            </td>
+        </tr>
+        <tr>
+            <td>3. Deri ve Mantar Hastalıkları</td>
+            <td>Cilt döküntüleri, kaşıntı, saç dökülmesi gibi belirtilerle; dermatitis, fungal enfeksiyonlar ve alerjik reaksiyonları değerlendirir.</td>
+            <td>
+                <b>Tanı:</b> Deri kazıntısı, biyopsi, mantar kültürü.<br>
+                <b>Tedavi:</b> Antifungal kremler, kortikosteroidler, antihistaminikler.
+            </td>
+        </tr>
+        <tr>
+            <td>4. Ürogenital Hastalıklar</td>
+            <td>İdrar yolu enfeksiyonları, üreme organlarıyla ilgili sorunlar gibi belirtilerle; sistit, prostatit, üretral obstrüksiyon gibi durumları içerir.</td>
+            <td>
+                <b>Tanı:</b> Üriner analiz, ultrason, idrar kültürü.<br>
+                <b>Tedavi:</b> Antibiyotikler, cerrahi müdahale, idrar asitörleri.
+            </td>
+        </tr>
+        <tr>
+            <td>5. Kardiyovasküler Hastalıklar</td>
+            <td>Nefes darlığı, ödem, yorgunluk gibi semptomlarla; kalp yetmezliği, kardiyomiyopati gibi kardiyovasküler problemleri değerlendirir.</td>
+            <td>
+                <b>Tanı:</b> EKG, echokardiografi, kan basıncı ölçümü.<br>
+                <b>Tedavi:</b> Kalp ilaçları, diyet değişiklikleri, egzersiz kısıtlamaları.
+            </td>
+        </tr>
+        <tr>
+            <td>6. Metabolik Hastalıklar</td>
+            <td>İştahsızlık, kilo değişiklikleri, kan değerlerinde anormallikler gibi belirtilerle; diyabet, böbrek hastalıkları, tiroid problemleri gibi metabolik durumları içerir.</td>
+            <td>
+                <b>Tanı:</b> Kan testleri, idrar analizleri, biyokimyasal profiller.<br>
+                <b>Tedavi:</b> Diyabet ilaçları, diyet tedavisi, hormon replasmanı.
+            </td>
+        </tr>
+        <tr>
+            <td>7. Nörolojik Hastalıklar</td>
+            <td>Koordinasyon kaybı, davranış değişiklikleri, nörolojik belirtilerle; ensefalit, epilepsi, spinal kord yaralanmaları gibi nörolojik problemleri değerlendirir.</td>
+            <td>
+                <b>Tanı:</b> MRG, beyin omurilik sıvısı analizi, nörolojik muayene.<br>
+                <b>Tedavi:</b> Antikonvülsanlar, anti-inflamatuar ilaçlar, rehabilitasyon terapileri.
+            </td>
+        </tr>
+        <tr>
+            <td>8. Travma ve Yaralanmalar</td>
+            <td>Kazalar sonucu oluşan yaralanmalar, kırıklar, morluklar gibi durumları değerlendirir; kafa travması, kemik kırıkları, deri yaraları gibi travma tiplerini içerir.</td>
+            <td>
+                <b>Tanı:</b> Fizik muayene, röntgen, kan testleri.<br>
+                <b>Tedavi:</b> Cerrahi müdahale, bandajlama, ağrı yönetimi.
+            </td>
+        </tr>
+        <!-- Yeni şemanız buraya eklenecek -->
+        <tr>
+            <td>9. Oftalmolojik Hastalıklar</td>
+            <td>Göz kızarıklığı, akıntı, görme bozuklukları gibi belirtilerle; konjunktivit, glokom, katarakt gibi oftalmolojik problemleri değerlendirir.</td>
+            <td>
+                <b>Tanı:</b> Göz muayenesi, tonometri, gözyaşı testi.<br>
+                <b>Tedavi:</b> Göz damlaları, cerrahi müdahale, göz hijyeni.
+            </td>
+        </tr>
+    </table>
+</div>
 </body>
 </html>
