--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Hesaplama')">Dozaj Hesaplama</button>
             <button class="tablinks" onclick="openTab(event, 'Sozluk')">İlaç Sözlüğü</button>
+            <button class="tablinks" onclick="openTab(event, 'differential')">Faydalı Ayırıcı Tanı Şemaları</button>
         </div>
 
         <div id="Hesaplama" class="tabcontent">
