--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'Hesaplama')">Dozaj Hesaplama</button>
             <button class="tablinks" onclick="openTab(event, 'Sozluk')">İlaç Sözlüğü</button>
+            <button class="tablinks" onclick="openTab(event, 'UltrasonMuayene')">Ultrason ve Muayene Şeması</button>
         </div>
 
         <div id="Hesaplama" class="tabcontent">
